force-app/main/default/objects/File_Upload_Setting__mdt/File_Upload_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Developed by the Capgemini team as part of initiatives ITRC-2920, CRM2-3566 and CRM2-3073.</description>
    <label>File Upload Setting</label>
    <pluralLabel>Files Upload Setting</pluralLabel>
</CustomObject>