force-app/main/default/objects/File_Upload_Setting__mdt/fields/Allowed_File_Types__c.field-meta.xml
<CustomField>
    <fullName>Allowed_File_Types__c</fullName>
    <label>Allowed File Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>