force-app/main/default/objects/File_Upload_Setting__mdt/fields/File_Type_Exempt_Objects__c.field-meta.xml
<CustomField>
    <fullName>File_Type_Exempt_Objects__c</fullName>
    <description>Skip file-type validation for objects mentioned in this field</description>
    <inlineHelpText>Skip file-type validation for objects mentioned in this field</inlineHelpText>
    <label>File Type Exempt Objects</label>
    <type>TextArea</type>
</CustomField>