force-app/main/default/objects/File_Upload_Setting__mdt/fields/File_Type_Validation_Enabled__c.field-meta.xml
<CustomField>
    <fullName>File_Type_Validation_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>File Type Validation Enabled</label>
    <type>Checkbox</type>
</CustomField>