force-app/main/default/objects/File_Upload_Setting__mdt/fields/Manual_Upload_Applicable_Objects__c.field-meta.xml
<CustomField>
    <fullName>Manual_Upload_Applicable_Objects__c</fullName>
    <label>Manual Upload Applicable Objects</label>
    <length>255</length>
    <type>Text</type>
</CustomField>