force-app/main/default/objects/File_Upload_Setting__mdt/fields/Manual_Upload_Control_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Manual_Upload_Control_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Upload Control Enabled</label>
    <type>Checkbox</type>
</CustomField>