force-app/main/default/objects/File_Upload_Setting__mdt/validationRules/File_Type_Validation_Ena_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>File_Type_Validation_Ena_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
File_Type_Validation_Enabled__c,
NOT(
REGEX(
Allowed_File_Types__c,
&quot;^[A-Za-z0-9_]+(,\\s*[A-Za-z0-9_]+)*$&quot;
)
)
)</errorConditionFormula>
    <errorMessage>Applicable File Type must be Valid and, comma-separated (e.g. pdf, docx, log)</errorMessage>
</ValidationRule>